# marker-analyser

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  checking_lumicks_file_handling.ipynb  loading.ipynb  marina_code_redo.ipynb  marina_fitting_data.ipynb  marina_loading_data.ipynb  pyproject.toml  shelterin-figure.ipynb  temp_test_classes.ipynb  to_implement_marina_multi_models_per_fit.py  unified_model_and_fixing_params.ipynb
.github/workflows/: tests.yaml
marker_analyser/: __init__.py  classes.py  data_manipulation.py  fitting.py  io.py  parsers.py
src/: fixed_st.ipynb  marina_code_redo.ipynb  marina_fitting_data.ipynb  unified_model_and_fixing_params.ipynb
src/marker_analyser/: __init__.py  classes.py  configuration.py  fitting.py  parsers.py  plotting.py
tests/: test_parsers.py
